Make required docs gate explicit
Task 66 requires every required document to exist and reflect current readiness, so this creates the missing final-verification gate and refreshes the documentation index/status across the required docs.\n\nConstraint: Documentation-only refresh; do not alter runtime services, ports, networks, volumes, or API behavior\nConfidence: high\nScope-risk: narrow\nTested: required-doc existence check; git diff --check; npm run lint; npm run build\nNot-tested: backend mvn test unavailable because mvn is not installed and backend/mvnw is absent