@@ -1,47 +1,41 @@
 # Final Verification
 
-Date: 2026-04-24
-Worker: worker-1
+## Status: NOT READY (2026-04-24)
 
-> 현재 문서는 최종 완료 선언이 아니라 완료 조건 재검사용 증적이다. 아래 표에 PARTIAL/FAIL/UNKNOWN이 남아 있으므로 SSAFY 풀 클론은 아직 완료가 아니다.
+The project must not be declared full-clone complete yet. Worker-4 verified that the required documentation set now exists, but several implementation and verification gates remain partial or blocked.
 
-| 기능명 | 상태 | 근거 파일 | 검증 명령 | 검증 결과 | 남은 작업 |
-|---|---|---|---|---|---|
-| Login/session | PARTIAL | `frontend/src/pages/LoginPage.tsx`, `frontend/src/api/app.ts`, `backend/src/main/java/com/edussafy/backend/priority/api/AuthController.java` | `cd frontend && npm run build` | PASS | 실제 credential 검증, 세션/토큰 만료, 비밀번호 복구 |
-| Profile | PARTIAL | `frontend/src/pages/ProfileEditPage.tsx`, `backend/src/main/java/com/edussafy/backend/priority/api/ProfileController.java` | `cd frontend && npm run build` | PASS | 서버 권한 enforcement, 영속 저장 검증 |
-| Campus/cohort/class/track | PARTIAL | `frontend/src/pages/ClassmatesPage.tsx`, `backend/src/main/java/com/edussafy/backend/priority/api/CommunityController.java` | `cd frontend && npm run build` | PASS | 관리/admin flow, 실데이터 CRUD |
-| Attendance | PARTIAL | `frontend/src/pages/AttendancePage.tsx`, `frontend/src/pages/AttendanceAppealPage.tsx`, `backend/src/main/java/com/edussafy/backend/priority/api/AttendanceController.java` | `cd frontend && npm run build` | PASS | 이의신청 workflow/status/history 영속화 |
-| Notifications | PARTIAL | `frontend/src/pages/NotificationsPage.tsx`, `backend/src/main/java/com/edussafy/backend/priority/api/NotificationController.java` | `cd frontend && npm run build` | PASS | mark-read/delete/send persistence, live rebuilt smoke |
-| Curriculum/replays | PARTIAL | `frontend/src/pages/CurriculumPage.tsx`, `frontend/src/pages/ReplaysPage.tsx`, `frontend/src/api/app.ts` | `cd frontend && npm run build` | PASS | replay authorization, progress state, richer filters |
-| Materials/resources | PARTIAL | `frontend/src/pages/MaterialsPage.tsx`, `frontend/src/pages/MaterialDetailPage.tsx`, `frontend/src/pages/MaterialViewerPage.tsx` | `cd frontend && npm run build` | PASS | 첨부파일, viewer fidelity, like/bookmark/favorite |
-| Quest/evaluation | PARTIAL | `frontend/src/pages/QuestPage.tsx`, `frontend/src/pages/QuestSubmitPage.tsx`, `backend/src/main/java/com/edussafy/backend/priority/api/QuestSurveyController.java` | `cd frontend && npm run build` | PASS | 결과 상세, file attachments, grading status |
-| Survey | PARTIAL | `frontend/src/pages/SurveyPage.tsx`, `frontend/src/pages/SurveyRespondPage.tsx`, `backend/src/main/java/com/edussafy/backend/priority/api/QuestSurveyController.java` | `cd frontend && npm run build` | PASS | full questions/options DTO, persisted responses |
-| Board/community | PARTIAL | `frontend/src/components/BoardListPage.tsx`, `frontend/src/pages/BoardDetailPage.tsx`, `backend/src/main/java/com/edussafy/backend/board/api/BoardController.java` | `cd frontend && npm run build` | PASS | attachments, edit/delete, permissions |
-| 1:1 inquiry | PARTIAL | `frontend/src/pages/QnaNewPage.tsx`, `backend/src/main/java/com/edussafy/backend/priority/api/SupportController.java` | `cd frontend && npm run build` | PASS | ticket thread messages, answers, status transitions, attachments |
-| Access control | PARTIAL | `frontend/src/App.tsx`, `frontend/src/pages/UnauthorizedPage.tsx`, `frontend/src/components/AppShell.tsx` | `cd frontend && npm run lint && npm run build` | PASS | server-side RBAC guard coverage, admin/operator role matrix |
-| Error/loading/empty states | PARTIAL | `frontend/src/components/DataState.tsx`, page components | `cd frontend && npm run lint` | PASS | mutation/permission error audit across all pages |
-| Local one-command run | UNKNOWN | `compose.yml`, `backend/Dockerfile`, `frontend/Dockerfile` | not rerun in worker | UNKNOWN | Docker live rebuild/smoke in host/CI environment |
-| Tests/smoke | FAIL | `backend/src/test/java`, `frontend/package.json` | `cd backend && MAVEN_OPTS='-Dnet.bytebuddy.experimental=true' /tmp/apache-maven-3.9.11/bin/mvn test -q` | FAIL: Java 25 Mockito/Byte Buddy instrumentation incompatibility | Run under Java 21 or upgrade Mockito/Byte Buddy; add browser E2E and CI |
-| README/docs | PARTIAL | `README.md`, `docs/remaining-work.md`, `docs/final-verification.md` | `git diff --check` | PASS | final runbook/API/progress/test docs after all PASS |
+## Required Documentation Presence
 
-## Verification Commands Run By worker-1
+| Document | Status | Notes |
+|---|---|---|
+| `docs/progress.md` | PASS | Updated with worker progress and Task 66 refresh. |
+| `docs/architecture.md` | PASS | Updated with architecture/documentation boundary and current partial status. |
+| `docs/api-summary.md` | PASS | Endpoint inventory exists; auth requirement remains demo-level until RBAC/session work completes. |
+| `docs/test-report.md` | PASS | Verification evidence and blockers are recorded. |
+| `docs/remaining-work.md` | PASS | Required non-PASS product gaps are listed. |
+| `README.md` | PASS | Localhost runbook, URL checklist, and verification commands exist. |
 
-```text
-cd frontend && npm run lint
-Result: PASS
+## Verification Evidence
 
-cd frontend && npm run build
-Result: PASS (tsc -b and vite build completed)
+| Check | Status | Evidence |
+|---|---|---|
+| Required docs existence | PASS | All required paths are present after creating this file. |
+| Frontend lint | PASS | `npm run lint` completed successfully in `frontend/`. |
+| Frontend production build | PASS | `npm run build` completed successfully in `frontend/` with Vite build output. |
+| Diff hygiene | PASS | `git diff --check` completed successfully after documentation edits. |
+| Backend tests | BLOCKED | `mvn` is not installed and `backend/mvnw` is absent in this worker environment. |
+| Live rebuilt smoke | BLOCKED | Requires host/CI environment with Docker/PowerShell availability. |
 
-git diff --check
-Result: PASS before documentation commit
+## Final PASS Gate
 
-cd backend && MAVEN_OPTS='-Dnet.bytebuddy.experimental=true' /tmp/apache-maven-3.9.11/bin/mvn test -q
-Result: FAIL on host Java 25 because Mockito/Byte Buddy cannot instrument mocks; use Java 21 or upgrade test tooling.
-```
+Final completion can only be declared when all of the following are true:
 
-## Final Completion Decision
+1. `docs/remaining-work.md` has no required product gaps.
+2. Backend tests pass in host/CI (`mvn -B test` or Dockerized Maven).
+3. Frontend lint/build pass.
+4. Live smoke passes against rebuilt services.
+5. Auth/RBAC, durable workflows, attachments, permissions, E2E/CI, and documentation are all marked PASS.
 
-FAIL: 최종 완료 조건 미충족.
+## Current Decision
 
-Reason: PARTIAL, FAIL, UNKNOWN 항목이 남아 있고 `docs/remaining-work.md`에도 필수 후속 작업이 존재한다. 모든 핵심 기능이 PASS가 될 때까지 완료 선언 금지.
+Current decision: **continue implementation/verification rounds**. Do not mark the full clone complete from the current evidence.
